force-app/main/default/objects/Business_Development__c/Business_Development__c.object-meta.xml
<CustomObject>
    <description>This is to record the business development and sales opportunities discussed on a monthly basis</description>
    <label>Business Development</label>
    <nameField>
        <label>Business Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Developments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>