force-app/main/default/objects/Business_Development__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>This needs to be completed before converting to a lead</inlineHelpText>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>