force-app/main/default/objects/Business_Development__c/fields/Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Use this if existing account</inlineHelpText>
    <label>Existing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Developments</relationshipLabel>
    <relationshipName>Business_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>