force-app/main/default/objects/Business_Development__c/fields/Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Developments</relationshipLabel>
    <relationshipName>Business_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>