force-app/main/default/objects/Business_Development__c/fields/First_Supply_Predicted_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Supply_Predicted_Date__c</fullName>
    <label>First Supply Predicted Date</label>
    <type>Date</type>
</CustomField>