force-app/main/default/objects/Business_Development__c/fields/Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Name_formula__c</fullName>
    <formula>IF (ISBLANK( Existing_Account__c ), New_Account__c &amp;&quot; &quot;&amp;TEXT( DATEVALUE (CreatedDate )), Existing_Account__r.Name &amp;&quot; &quot;&amp; TEXT(DATEVALUE (CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name formula</label>
    <type>Text</type>
</CustomField>