force-app/main/default/objects/Business_Development__c/fields/New_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Account__c</fullName>
    <inlineHelpText>Use this if Account is not set up in Salesforce</inlineHelpText>
    <label>New Account</label>
    <type>TextArea</type>
</CustomField>