force-app/main/default/objects/Business_Development__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Begin with Date</inlineHelpText>
    <label>Next Steps/Comments (Begin with Date)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>