force-app/main/default/objects/Business_Development__c/fields/Opportunity_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Business_Type__c</fullName>
    <label>Opportunity Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Business_Type</valueSetName>
    </valueSet>
</CustomField>