force-app/main/default/objects/Business_Development__c/fields/Qualified_Out__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Out__c</fullName>
    <inlineHelpText>Reason why the business development will not be converted into an opportunity</inlineHelpText>
    <label>Qualified Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Suitability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>