force-app/main/default/objects/Business_Development__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Business Developments</relationshipLabel>
    <relationshipName>Business_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>