force-app/main/default/objects/Business_Development__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Business Developments</relationshipLabel>
    <relationshipName>Business_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>