force-app/main/default/objects/Business_Development__c/fields/Supply_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Term_End_Date__c</fullName>
    <label>Supply Term End Date</label>
    <type>Date</type>
</CustomField>