force-app/main/default/objects/Business_Development__c/fields/Tons_Volume__c.field-meta.xml
<CustomField>
    <fullName>Tons_Volume__c</fullName>
    <label>Tons Volume (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>