force-app/main/default/objects/Business_Development__c/fields/Units_Volume_M__c.field-meta.xml
<CustomField>
    <fullName>Units_Volume_M__c</fullName>
    <label>Units Volume (M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>