force-app/main/default/objects/Business_Development__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Existing_Account__c</columns>
    <columns>New_Account__c</columns>
    <columns>Product__c</columns>
    <columns>Units_Volume_M__c</columns>
    <columns>Tons_Volume__c</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>