force-app/main/default/objects/Business_Development__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Related_Lead__c</columns>
    <columns>Related_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>