force-app/main/default/objects/Business_Development__c/listViews/Business_Developments_2022.listView-meta.xml
<ListView>
    <fullName>Business_Developments_2022</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>Related_Lead__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Opportunity_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>Business Developments 2022</label>
</ListView>