force-app/main/default/objects/Business_Development__c/listViews/My_Business_Development.listView-meta.xml
<ListView>
    <fullName>My_Business_Development</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Business Development</label>
</ListView>